# cLogging

./: .gitignore  CMakeLists.txt  Logging.h  README  README.md
cmake/: logging-config-version.cmake.in  logging-config.cmake.in
example/: color.cpp  custom.c  extend.c  format.c  logfile.cpp  logfile2.cpp  logging.c  threading.cpp
example/cmake/: CMakeLists.txt
example/makefile/: Makefile
test/: Makefile  basic.c  format.c  main.c  threading.cpp
test/cmake/: CMakeLists.txt
test/makefile/: Makefile
